all apis with schmea and model is done
