# src/routes/inventory.ts
@@ -1,5 +1,5 @@
 import {Router} from 'express';
-import { addInventory, getNewStock, getSummary } from '../controllers/inventoryController';
+import { addInventory, getNewStock, getStockDetails, getSummary } from '../controllers/inventoryController';
 import authMiddleware from '../middleware/authMiddleware';
 
 const inventoryRouter:Router=Router();
@@ -7,5 +7,6 @@ const inventoryRouter:Router=Router();
 inventoryRouter.post("/add", addInventory);
 inventoryRouter.get("/newStock",authMiddleware, getNewStock);
 inventoryRouter.get("/summary",authMiddleware, getSummary);
+inventoryRouter.get("/stockDetails",authMiddleware,getStockDetails);
 
 export default inventoryRouter;
